@@ -1,0 +1,19 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+<link rel="stylesheet" href="../../js/resources/js-test-style.css">
+<script src="../js/resources/js-test-pre.js"></script>
+</head>
+<body>
+<p id="description"></p>
+<div id="console"></div>
+<script>
+description('Test how file system methods react to too few arguments.');
+shouldThrow("webkitRequestFileSystem()");
+shouldThrow("webkitRequestFileSystem(TEMPORARY)");
+shouldThrow("webkitResolveLocalFileSystemURL()");
+successfullyParsed = true;
+</script>
+<script src="../js/resources/js-test-post.js"></script>
+</body>
+</html>
